--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <br>
     <hr>
     <h2>Localização</h2>
+    
     <br>
     <hr>
     <h2>Descrição</h2>
-    <p>awdadawwdouhawduiohaduahoiudhaiou</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore praesentium molestias ut illum autem blanditiis
+        maiores doloribus vero nostrum, aut esse iusto ex explicabo quam reiciendis laudantium sapiente a nemo.</p>
     <br>
     <hr>
     <h2>Hobbies</h2>
