--- a/index.html
+++ b/index.html
@@ -11,28 +11,46 @@
 <body>
 
     <header>
-        <img src="img/images-600x377.png" alt="">
+        <img src="img/images.png" class="anonimo" height="200px" width="200px">
         <h1>Nome:**********************</h1>
-        <h3>Idade:**</h3>
-        <br>
+        <h1>Idade:**</h1>
+
     </header>
     <br>
     <hr>
     <h2>Localização</h2>
-    
-    <br>
-    <hr>
+    <div class="Local">
+    <img src="img/wms.png" class="mapa">
+    <ul>
+        <li>CEP:**************</li>
+        <li>Cidade:*************************</li>
+        <li>Bairro:****************</li>
+        <li>Rua:*************************** N°:****</li>
+    </ul>
+</div>
+    <br><hr><br>
     <h2>Descrição</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore praesentium molestias ut illum autem blanditiis
-        maiores doloribus vero nostrum, aut esse iusto ex explicabo quam reiciendis laudantium sapiente a nemo.</p>
-    <br>
-    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut porro fuga dolor repellat tenetur molestias minima saepe quia, ullam eos earum exercitationem voluptates, aperiam fugiat itaque illum error velit sint.
+    Facilis porro eius commodi doloribus. Quis quos, aut ipsa corrupti soluta totam. Eligendi vitae consectetur nisi dolorum alias animi! Qui beatae voluptates, quasi asperiores dignissimos iste nemo sapiente placeat quidem.
+    Veritatis neque dolor officia error laudantium voluptates placeat deserunt non eius minus, repellendus excepturi. Ex necessitatibus similique, nulla porro et, rerum consequatur mollitia odit quia delectus sint at? Eveniet, dolor.</p>
+    <br><hr><br>
     <h2>Hobbies</h2>
     <ul>
-        <li></li>
-        <li></li>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit a in commodi aperiam nobis magnam omnis
+            deleniti fuga praesentium harum quis repellendus ex, ipsum expedita minima dolorem rem tenetur doloribus.
+        </li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus fugiat corrupti libero. Quisquam eveniet
+            illo voluptatum. Quidem sunt alias inventore necessitatibus temporibus nulla laboriosam odit harum eum unde!
+            Dignissimos, totam?</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, consequuntur neque nisi deleniti in alias reprehenderit tempora nostrum cum, vel, quasi nesciunt aliquid nulla ea aliquam minus adipisci excepturi vero.</li>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum minima molestiae libero laborum quis quam odit, optio dolores unde debitis corporis? Ratione dicta laboriosam est eligendi labore aspernatur explicabo doloribus!</li>
     </ul>
-
+    <br>
+    <footer>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi deserunt vero mollitia rerum! Voluptas iusto dolorum ut repellat. Reprehenderit impedit architecto illum ab quisquam accusamus dolorum natus nam laboriosam a!</p>
+        <img src="img/logo-instagram-png-fundo-transparente.png" width="50px" height="50px">
+        <img src="img/facebook_original_logo_icon_146526.png" width="50px" height="50px">
+    </footer>
 </body>
 
 <script>
