--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="img/images.png" class="anonimo" height="200px" width="200px">
+        <img src="img/images.png" class="anonimo" height="10%" width="10%">
         <h1>Nome:**********************</h1>
         <h1>Idade:**</h1>
     </header>
@@ -53,8 +53,8 @@
     <br>
     <footer>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi deserunt vero mollitia rerum! Voluptas iusto dolorum ut repellat. Reprehenderit impedit architecto illum ab quisquam accusamus dolorum natus nam laboriosam a!</p>
-        <img src="img/logo-instagram-png-fundo-transparente.png" width="50px" height="50px">
-        <img src="img/facebook_original_logo_icon_146526.png" width="50px" height="50px">
+        <img src="img/logo-instagram-png-fundo-transparente.png" width="2%" height="2%">
+        <img src="img/facebook_original_logo_icon_146526.png" width="2%" height="2%">
     </footer>
 </body>
 
