--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="img/images.png" class="anonimo" height="10%" width="10%">
+        <img src="img/images.png" alt="foto" class="anonimo" height="10%" width="10%">
         <h1>Nome:**********************</h1>
         <h1>Idade:**</h1>
     </header>
@@ -25,7 +25,7 @@
     <hr>
     <h2>Localização</h2>
     <div class="Local">
-    <img src="img/wms.png" class="mapa">
+    <img src="img/wms.png" alt="mapa" class="mapa">
     <ul>
         <li>CEP:**************</li>
         <li>Cidade:*************************</li>
